--- a/Example/Exanple1.ipynb
+++ b/Example/Exanple1.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
       " 0   Id             150 non-null    int64  \n",
       " 1   SepalLengthCm  150 non-null    float64\n",
       " 2   SepalWidthCm   150 non-null    float64\n",
-      " 3   PetalLengthCm  149 non-null    float64\n",
+      " 3   PetalLengthCm  150 non-null    float64\n",
       " 4   PetalWidthCm   150 non-null    float64\n",
       " 5   Species        150 non-null    object \n",
       "dtypes: float64(4), int64(1), object(1)\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,16 +188,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 82 entries, 1 to 149\n",
+      "Index: 83 entries, 0 to 149\n",
       "Data columns (total 6 columns):\n",
       " #   Column         Non-Null Count  Dtype  \n",
       "---  ------         --------------  -----  \n",
-      " 0   Id             82 non-null     int64  \n",
-      " 1   SepalLengthCm  82 non-null     float64\n",
-      " 2   SepalWidthCm   82 non-null     float64\n",
-      " 3   PetalLengthCm  82 non-null     float64\n",
-      " 4   PetalWidthCm   82 non-null     float64\n",
-      " 5   Species        82 non-null     object \n",
+      " 0   Id             83 non-null     int64  \n",
+      " 1   SepalLengthCm  83 non-null     float64\n",
+      " 2   SepalWidthCm   83 non-null     float64\n",
+      " 3   PetalLengthCm  83 non-null     float64\n",
+      " 4   PetalWidthCm   83 non-null     float64\n",
+      " 5   Species        83 non-null     object \n",
       "dtypes: float64(4), int64(1), object(1)\n",
       "memory usage: 4.5+ KB\n"
      ]
@@ -209,6 +209,26 @@
     "dfv1 = df[filter1]\n",
     "\n",
     "dfv1.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Removing a Column from the df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a list of columns that you want to drop\n",
+    "columns_to_drop = ['Id', 'SepalLengthCm']\n",
+    "\n",
+    "# Override existing df with new df w/ dropped columns\n",
+    "df = df.drop(columns = columns_to_drop)"
    ]
   }
  ],
