--- a/Instructor_Examples/p1v2_CoreData_dfConversion.ipynb
+++ b/Instructor_Examples/p1v2_CoreData_dfConversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_data_path = \"Results/p1v2_results.csv\"\n",
+    "video_data_path = \"../Computer Vision/Results/p1v2/p1v2_results.csv\"\n",
     "df_p1v2 = pd.read_csv(video_data_path, encoding = 'latin-1').dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>angular_velocity</th>\n",
+       "      <th>linear_acceleration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.121215</td>\n",
+       "      <td>-30.852290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.556502</td>\n",
+       "      <td>-83.042684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.847324</td>\n",
+       "      <td>166.904951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2.197242</td>\n",
+       "      <td>150.184794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.809987</td>\n",
+       "      <td>-181.772989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3670</th>\n",
+       "      <td>2.172544</td>\n",
+       "      <td>248.187326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3671</th>\n",
+       "      <td>-0.456686</td>\n",
+       "      <td>-337.951332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3672</th>\n",
+       "      <td>-2.992782</td>\n",
+       "      <td>-330.429194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3673</th>\n",
+       "      <td>1.821059</td>\n",
+       "      <td>617.176007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3674</th>\n",
+       "      <td>1.647167</td>\n",
+       "      <td>-22.461201</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3673 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      angular_velocity  linear_acceleration\n",
+       "2             0.121215           -30.852290\n",
+       "3            -0.556502           -83.042684\n",
+       "4             0.847324           166.904951\n",
+       "5             2.197242           150.184794\n",
+       "6             0.809987          -181.772989\n",
+       "...                ...                  ...\n",
+       "3670          2.172544           248.187326\n",
+       "3671         -0.456686          -337.951332\n",
+       "3672         -2.992782          -330.429194\n",
+       "3673          1.821059           617.176007\n",
+       "3674          1.647167           -22.461201\n",
+       "\n",
+       "[3673 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#pd.set_option('display.max_columns', None)\n",
     "df_p1v2_Core = df_p1v2.iloc[:, [12, 13]]\n",
@@ -33,12 +141,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ivan\\AppData\\Local\\Temp\\ipykernel_17628\\275043769.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_p1v2_Core[f'new_col_{df_p1v2_Core.shape[1]}'] = 0\n",
+      "C:\\Users\\Ivan\\AppData\\Local\\Temp\\ipykernel_17628\\275043769.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_p1v2_Core[f'new_col_{df_p1v2_Core.shape[1]}'] = 0\n",
+      "C:\\Users\\Ivan\\AppData\\Local\\Temp\\ipykernel_17628\\275043769.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_p1v2_Core[f'new_col_{df_p1v2_Core.shape[1]}'] = 0\n",
+      "C:\\Users\\Ivan\\AppData\\Local\\Temp\\ipykernel_17628\\275043769.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_p1v2_Core.rename(columns=column_mapping, inplace=True)\n",
+      "C:\\Users\\Ivan\\AppData\\Local\\Temp\\ipykernel_17628\\275043769.py:17: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '115.96' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  df_p1v2_Core.loc[:, 'FoG Total Time'] = FogRatioTimeUPDRSIII[1]\n",
+      "C:\\Users\\Ivan\\AppData\\Local\\Temp\\ipykernel_17628\\275043769.py:18: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '17.94' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  df_p1v2_Core.loc[:, 'FoG Ratio'] = FogRatioTimeUPDRSIII[2]\n",
+      "C:\\Users\\Ivan\\AppData\\Local\\Temp\\ipykernel_17628\\275043769.py:21: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_p1v2_Core['UPDRS-III'] = df_p1v2_Core['UPDRS-III'].astype(float)\n",
+      "C:\\Users\\Ivan\\AppData\\Local\\Temp\\ipykernel_17628\\275043769.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_p1v2_Core['FoG Total Time'] = df_p1v2_Core['FoG Total Time'].astype(float)\n",
+      "C:\\Users\\Ivan\\AppData\\Local\\Temp\\ipykernel_17628\\275043769.py:23: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_p1v2_Core['FoG Ratio'] = df_p1v2_Core['FoG Ratio'].astype(float)\n"
+     ]
+    }
+   ],
    "source": [
     "# added FoG ratio, time, and UPDRS-III\n",
-    "Patient_All_Data = \"../Data/PDFEinfo.csv\"\n",
+    "Patient_All_Data = \"../Example/Data/PDFEinfo.csv\"\n",
     "df_all = pd.read_csv(Patient_All_Data, encoding='latin-1', sep=';')\n",
     "\n",
     "FogRatioTimeUPDRSIII = df_all.iloc[0, [32, 43, 45]].values.astype(float)\n",
@@ -64,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_p1v2_Core.to_csv('../Computer Vision/Results/df_p1v2_Core.csv', index=False)"
+    "import matplolib.pyplot as plt"
    ]
   }
  ],
@@ -88,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
