--- a/Computer Vision/graph_data.ipynb
+++ b/Computer Vision/graph_data.ipynb
@@ -188,7 +188,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normal People Data np1_1 vs np1_2"
+    "### Normal People Data \n",
+    "np1_1 vs np1_2"
    ]
   },
   {
@@ -235,7 +236,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normal Data vs. Patient Data "
+    "### Normal Data vs. Patient Data \n",
+    "np1v2 vs p1v2"
    ]
   },
   {
@@ -396,12 +398,64 @@
     }
    ],
    "source": [
-    "\n",
+    "# np1v2 vs. p1v2\n",
     "patient_stats = df_p1v2['linear_acceleration'].describe()\n",
     "print(\"Patient Data Statistics:\")\n",
     "print(patient_stats)\n",
     "\n",
     "normal_stats = df_np1v2['linear_acceleration'].describe()\n",
+    "print(\"Normal Data Statistics:\")\n",
+    "print(normal_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_p1v1 = pd.read_csv('Results/p1v1/p1v1_results.csv') #patient\n",
+    "df_np1v1 = pd.read_csv('Results/np1v1_results.csv') #normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patient Data Statistics:\n",
+      "count    3255.000000\n",
+      "mean        0.033415\n",
+      "std        97.032716\n",
+      "min     -1794.957389\n",
+      "25%       -33.511011\n",
+      "50%         0.627522\n",
+      "75%        31.732623\n",
+      "max      1320.504493\n",
+      "Name: linear_acceleration, dtype: float64\n",
+      "Normal Data Statistics:\n",
+      "count    7311.000000\n",
+      "mean        0.057500\n",
+      "std        71.020173\n",
+      "min      -729.699033\n",
+      "25%       -27.280563\n",
+      "50%         0.496289\n",
+      "75%        28.309368\n",
+      "max       677.486215\n",
+      "Name: linear_acceleration, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "patient_stats = df_p1v1['linear_acceleration'].describe()\n",
+    "print(\"Patient Data Statistics:\")\n",
+    "print(patient_stats)\n",
+    "\n",
+    "normal_stats = df_np1v1['linear_acceleration'].describe()\n",
     "print(\"Normal Data Statistics:\")\n",
     "print(normal_stats)"
    ]
