--- a/Instructor_Examples/Stdv-of-VideoSensor-Analysis.ipynb
+++ b/Instructor_Examples/Stdv-of-VideoSensor-Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import os\n",
     "\n",
     "# Path to the folder of csv files\n",
-    "path_to_folder = 'path/to/folder'\n",
+    "path_to_folder = '../Computer Vision/Results/test/'\n",
     "\n",
     "# Create an empty list\n",
     "summary_list = []\n",
@@ -42,8 +42,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.11"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
