update after class

--- a/Instructor_Examples/Stdv-of-VideoSensor-Analysis.ipynb
+++ b/Instructor_Examples/Stdv-of-VideoSensor-Analysis.ipynb
@@ -2,9 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing file: ../Computer Vision/Results/test/p5v2_results.csv\n",
+      "DataFrame shape: (3610, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p1v2_results.csv\n",
+      "DataFrame shape: (3675, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p6v2_results.csv\n",
+      "DataFrame shape: (3596, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p2v1_results.csv\n",
+      "DataFrame shape: (3688, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p6v1_results.csv\n",
+      "DataFrame shape: (3615, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p1v1_results.csv\n",
+      "DataFrame shape: (3257, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p5v1_results.csv\n",
+      "DataFrame shape: (802, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p3v3_results.csv\n",
+      "DataFrame shape: (180, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p4v1_results.csv\n",
+      "DataFrame shape: (56, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p7v1_results.csv\n",
+      "DataFrame shape: (3600, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p3v1_results.csv\n",
+      "DataFrame shape: (2363, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: ../Computer Vision/Results/test/p7v2_results.csv\n",
+      "DataFrame shape: (3650, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Combined description shape: (168, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -17,17 +61,20 @@
     "\n",
     "# Iterate over each file in the folder\n",
     "for file_name in os.listdir(path_to_folder):\n",
-    "    # Create directory for each individual video\n",
-    "    file_path = os.path.join(path_to_folder, file_name)\n",
-    "\n",
-    "    # Ensure only CSV files are processed\n",
-    "    if file_path.endswith('.csv'):\n",
+    "    if file_name.endswith('.csv'):\n",
+    "        file_path = os.path.join(path_to_folder, file_name)\n",
+    "        \n",
     "        # Read the csv file, calculate the stats and add a column of which file the stats came from\n",
     "        df = pd.read_csv(file_path)\n",
     "        df_desc = df.describe().T\n",
+    "        \n",
+    "        # Add a column for the statistic names\n",
+    "        df_desc['statistic'] = df_desc.index\n",
+    "        \n",
+    "        # Add a column for the file name\n",
     "        df_desc['file'] = file_name\n",
     "        \n",
-    "        # Print the shape of the DataFrame and the stats\n",
+    "        # Print the shape of the DataFrame and the stats for debugging\n",
     "        print(f\"Processing file: {file_path}\")\n",
     "        print(f\"DataFrame shape: {df.shape}\")\n",
     "        print(f\"Statistics shape: {df_desc.shape}\")\n",
@@ -38,7 +85,10 @@
     "# Combine the statistics dataframes from 'summary_list' into one df\n",
     "combined_desc = pd.concat(summary_list)\n",
     "\n",
-    "# Print the shape of the combined DataFrame\n",
+    "# Ensure the columns are ordered as desired\n",
+    "combined_desc = combined_desc[['statistic', 'file'] + [col for col in combined_desc.columns if col not in ['statistic', 'file']]]\n",
+    "\n",
+    "# Print the number of files processed and the shape of the combined DataFrame\n",
     "print(f\"Combined description shape: {combined_desc.shape}\")\n",
     "\n",
     "# Save to CSV\n",
@@ -47,65 +97,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>statistic</th>\n",
+       "      <th>file</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p5v2_results.csv</td>\n",
+       "      <td>3608.0</td>\n",
+       "      <td>-0.622889</td>\n",
+       "      <td>2183.657657</td>\n",
+       "      <td>-18625.381836</td>\n",
+       "      <td>-964.659209</td>\n",
+       "      <td>15.226128</td>\n",
+       "      <td>1051.251647</td>\n",
+       "      <td>15959.729982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p1v2_results.csv</td>\n",
+       "      <td>3673.0</td>\n",
+       "      <td>0.005883</td>\n",
+       "      <td>103.086550</td>\n",
+       "      <td>-1768.904948</td>\n",
+       "      <td>-29.883881</td>\n",
+       "      <td>-0.008015</td>\n",
+       "      <td>31.233710</td>\n",
+       "      <td>1561.420003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p6v2_results.csv</td>\n",
+       "      <td>3594.0</td>\n",
+       "      <td>42.327766</td>\n",
+       "      <td>22801.158901</td>\n",
+       "      <td>-139147.005423</td>\n",
+       "      <td>-2471.504344</td>\n",
+       "      <td>40.593462</td>\n",
+       "      <td>2317.304937</td>\n",
+       "      <td>135162.972179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p2v1_results.csv</td>\n",
+       "      <td>3686.0</td>\n",
+       "      <td>0.937091</td>\n",
+       "      <td>2882.543760</td>\n",
+       "      <td>-64885.263472</td>\n",
+       "      <td>-377.322379</td>\n",
+       "      <td>-6.511310</td>\n",
+       "      <td>386.692502</td>\n",
+       "      <td>35090.133959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p6v1_results.csv</td>\n",
+       "      <td>3613.0</td>\n",
+       "      <td>-1.138730</td>\n",
+       "      <td>839.829571</td>\n",
+       "      <td>-5863.590041</td>\n",
+       "      <td>-300.604528</td>\n",
+       "      <td>-1.098538</td>\n",
+       "      <td>297.185155</td>\n",
+       "      <td>5503.223940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p1v1_results.csv</td>\n",
+       "      <td>3255.0</td>\n",
+       "      <td>0.033415</td>\n",
+       "      <td>97.032716</td>\n",
+       "      <td>-1794.957389</td>\n",
+       "      <td>-33.511011</td>\n",
+       "      <td>0.627522</td>\n",
+       "      <td>31.732623</td>\n",
+       "      <td>1320.504493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p5v1_results.csv</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>4.002072</td>\n",
+       "      <td>1887.199948</td>\n",
+       "      <td>-9022.112867</td>\n",
+       "      <td>-989.025785</td>\n",
+       "      <td>4.620758</td>\n",
+       "      <td>1028.574324</td>\n",
+       "      <td>8155.779526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p3v3_results.csv</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>-462.574935</td>\n",
+       "      <td>16251.621569</td>\n",
+       "      <td>-74515.409909</td>\n",
+       "      <td>-681.067100</td>\n",
+       "      <td>-36.525705</td>\n",
+       "      <td>547.420232</td>\n",
+       "      <td>143546.750237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p4v1_results.csv</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>-10.407901</td>\n",
+       "      <td>37430.889725</td>\n",
+       "      <td>-171496.534740</td>\n",
+       "      <td>-720.560729</td>\n",
+       "      <td>-39.141954</td>\n",
+       "      <td>719.292072</td>\n",
+       "      <td>87984.918294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p7v1_results.csv</td>\n",
+       "      <td>3598.0</td>\n",
+       "      <td>0.406353</td>\n",
+       "      <td>627.615418</td>\n",
+       "      <td>-6149.772599</td>\n",
+       "      <td>-236.338020</td>\n",
+       "      <td>8.665731</td>\n",
+       "      <td>232.829749</td>\n",
+       "      <td>6262.992322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p3v1_results.csv</td>\n",
+       "      <td>2361.0</td>\n",
+       "      <td>-0.821891</td>\n",
+       "      <td>15190.247544</td>\n",
+       "      <td>-197927.213286</td>\n",
+       "      <td>-682.467726</td>\n",
+       "      <td>15.345321</td>\n",
+       "      <td>685.937603</td>\n",
+       "      <td>204793.309517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>p7v2_results.csv</td>\n",
+       "      <td>3648.0</td>\n",
+       "      <td>9.867675</td>\n",
+       "      <td>20716.650181</td>\n",
+       "      <td>-144561.746619</td>\n",
+       "      <td>-452.352107</td>\n",
+       "      <td>3.941835</td>\n",
+       "      <td>459.266910</td>\n",
+       "      <td>148687.569065</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              statistic              file   count        mean           std  \\\n",
+       "0   linear_acceleration  p5v2_results.csv  3608.0   -0.622889   2183.657657   \n",
+       "1   linear_acceleration  p1v2_results.csv  3673.0    0.005883    103.086550   \n",
+       "2   linear_acceleration  p6v2_results.csv  3594.0   42.327766  22801.158901   \n",
+       "3   linear_acceleration  p2v1_results.csv  3686.0    0.937091   2882.543760   \n",
+       "4   linear_acceleration  p6v1_results.csv  3613.0   -1.138730    839.829571   \n",
+       "5   linear_acceleration  p1v1_results.csv  3255.0    0.033415     97.032716   \n",
+       "6   linear_acceleration  p5v1_results.csv   800.0    4.002072   1887.199948   \n",
+       "7   linear_acceleration  p3v3_results.csv   178.0 -462.574935  16251.621569   \n",
+       "8   linear_acceleration  p4v1_results.csv    54.0  -10.407901  37430.889725   \n",
+       "9   linear_acceleration  p7v1_results.csv  3598.0    0.406353    627.615418   \n",
+       "10  linear_acceleration  p3v1_results.csv  2361.0   -0.821891  15190.247544   \n",
+       "11  linear_acceleration  p7v2_results.csv  3648.0    9.867675  20716.650181   \n",
+       "\n",
+       "              min          25%        50%          75%            max  \n",
+       "0   -18625.381836  -964.659209  15.226128  1051.251647   15959.729982  \n",
+       "1    -1768.904948   -29.883881  -0.008015    31.233710    1561.420003  \n",
+       "2  -139147.005423 -2471.504344  40.593462  2317.304937  135162.972179  \n",
+       "3   -64885.263472  -377.322379  -6.511310   386.692502   35090.133959  \n",
+       "4    -5863.590041  -300.604528  -1.098538   297.185155    5503.223940  \n",
+       "5    -1794.957389   -33.511011   0.627522    31.732623    1320.504493  \n",
+       "6    -9022.112867  -989.025785   4.620758  1028.574324    8155.779526  \n",
+       "7   -74515.409909  -681.067100 -36.525705   547.420232  143546.750237  \n",
+       "8  -171496.534740  -720.560729 -39.141954   719.292072   87984.918294  \n",
+       "9    -6149.772599  -236.338020   8.665731   232.829749    6262.992322  \n",
+       "10 -197927.213286  -682.467726  15.345321   685.937603  204793.309517  \n",
+       "11 -144561.746619  -452.352107   3.941835   459.266910  148687.569065  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../Instructor_Examples/combined_summary.csv')\n",
+    "\n",
+    "stats = ['linear_acceleration']\n",
+    "\n",
+    "df2 = df[df['statistic'].isin(stats)].copy()\n",
+    "\n",
+    "df2.reset_index(drop = True, inplace = True)\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                      count          mean           std           min  \\\n",
-      "timestamp            3650.0  1.720902e+09     79.958000  1.720902e+09   \n",
-      "frame_time           3650.0  6.087748e+01     35.162079  0.000000e+00   \n",
-      "index                3650.0  6.783562e-01      0.467171  0.000000e+00   \n",
-      "right_ankle_x        3650.0  4.496368e-01      0.037596  4.009564e-01   \n",
-      "right_ankle_y        3650.0  5.430011e-01      0.035675  4.526048e-01   \n",
-      "right_knee_x         3650.0  4.557660e-01      0.035201  4.029346e-01   \n",
-      "right_knee_y         3650.0  2.773654e-01      0.039245  1.190315e-01   \n",
-      "right_hip_x          3650.0  3.464998e-01      0.189593  0.000000e+00   \n",
-      "right_hip_y          3650.0  1.785154e-02      0.014742  0.000000e+00   \n",
-      "magnitude1           3650.0  2.658106e-01      0.033934  1.929995e-01   \n",
-      "magnitude2           3650.0  5.593642e-01      0.067973  4.222052e-01   \n",
-      "angle_deg            3650.0  1.090463e+01     16.541189  0.000000e+00   \n",
-      "angular_velocity     3649.0  6.155509e-03     98.301165 -5.528497e+02   \n",
-      "linear_acceleration  3648.0  9.867675e+00  20716.650181 -1.445617e+05   \n",
-      "\n",
-      "                              25%           50%           75%           max  \\\n",
-      "timestamp            1.720902e+09  1.720902e+09  1.720902e+09  1.720902e+09   \n",
-      "frame_time           3.043874e+01  6.087748e+01  9.131623e+01  1.217550e+02   \n",
-      "index                0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00   \n",
-      "right_ankle_x        4.183954e-01  4.329544e-01  4.815838e-01  6.953064e-01   \n",
-      "right_ankle_y        5.211814e-01  5.436954e-01  5.729547e-01  5.954373e-01   \n",
-      "right_knee_x         4.186197e-01  4.486990e-01  4.879535e-01  6.755825e-01   \n",
-      "right_knee_y         2.555872e-01  2.836314e-01  3.081541e-01  3.350054e-01   \n",
-      "right_hip_x          4.002027e-01  4.288325e-01  4.670948e-01  6.616287e-01   \n",
-      "right_hip_y          2.487130e-03  1.826121e-02  2.757896e-02  9.070678e-02   \n",
-      "magnitude1           2.503234e-01  2.652589e-01  2.744062e-01  4.057353e-01   \n",
-      "magnitude2           5.161719e-01  5.454820e-01  5.655943e-01  7.099565e-01   \n",
-      "angle_deg            1.450518e+00  2.271347e+00  3.916758e+00  4.413012e+01   \n",
-      "angular_velocity    -2.088277e+00  7.756488e-02  2.094851e+00  5.771105e+02   \n",
-      "linear_acceleration -4.523521e+02  3.941835e+00  4.592669e+02  1.486876e+05   \n",
-      "\n",
-      "                                                                 file  \n",
-      "timestamp            ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "frame_time           ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "index                ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "right_ankle_x        ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "right_ankle_y        ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "right_knee_x         ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "right_knee_y         ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "right_hip_x          ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "right_hip_y          ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "magnitude1           ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "magnitude2           ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "angle_deg            ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "angular_velocity     ../Computer Vision/Results/test/p7v2_results.csv  \n",
-      "linear_acceleration  ../Computer Vision/Results/test/p7v2_results.csv  \n"
+      "The average min is: -69646.49109419722\n",
+      "The average max is: 66169.10862647097\n",
+      "The average std is: 10084.294461699985\n"
      ]
     }
    ],
    "source": [
-    "print(df_desc)"
+    "average_std_all = df2['std'].mean()\n",
+    "average_min_all = df2['min'].mean()\n",
+    "average_max_all = df2['max'].mean()\n",
+    "\n",
+    "print(f\"The average min is: {average_min_all}\")\n",
+    "print(f\"The average max is: {average_max_all}\")\n",
+    "print(f\"The average std is: {average_std_all}\")"
    ]
   }
  ],
