--- a/Computer Vision/Utils/Stdv-of-VideoSensor-Analysis.ipynb
+++ b/Computer Vision/Utils/Stdv-of-VideoSensor-Analysis.ipynb
@@ -2,50 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing file: ../Computer Vision/Results/test/p5v2_results.csv\n",
-      "DataFrame shape: (3610, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p1v2_results.csv\n",
-      "DataFrame shape: (3675, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p6v2_results.csv\n",
-      "DataFrame shape: (3596, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p2v1_results.csv\n",
-      "DataFrame shape: (3688, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p6v1_results.csv\n",
-      "DataFrame shape: (3615, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p1v1_results.csv\n",
-      "DataFrame shape: (3257, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p5v1_results.csv\n",
-      "DataFrame shape: (802, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p3v3_results.csv\n",
-      "DataFrame shape: (180, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p4v1_results.csv\n",
-      "DataFrame shape: (56, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p7v1_results.csv\n",
-      "DataFrame shape: (3600, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p3v1_results.csv\n",
-      "DataFrame shape: (2363, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Processing file: ../Computer Vision/Results/test/p7v2_results.csv\n",
-      "DataFrame shape: (3650, 14)\n",
-      "Statistics shape: (14, 10)\n",
-      "Combined description shape: (168, 10)\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Computer Vision/Results/test/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m summary_list \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Iterate over each file in the folder\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_name \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_folder\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m file_name\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m     13\u001b[0m         file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path_to_folder, file_name)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Computer Vision/Results/test/'"
      ]
     }
    ],
@@ -54,7 +22,7 @@
     "import os\n",
     "\n",
     "# Path to the folder of csv files\n",
-    "path_to_folder = '../Computer Vision/Results/test/'\n",
+    "path_to_folder = 'Computer Vision/Results/test/'\n",
     "\n",
     "# Create an empty list\n",
     "summary_list = []\n",
@@ -382,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
