--- a/Computer Vision/Utils/vid_stats_concatenation.ipynb
+++ b/Computer Vision/Utils/vid_stats_concatenation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,13 @@
     "    print(\"Directory does not exist!\")\n",
     "else:\n",
     "    print(\"Directory exists!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Patient Videos"
    ]
   },
   {
@@ -538,6 +545,166 @@
     "\n",
     "df_all_stats_angularAcceleration.to_csv('Computer Vision/Results/df_all_stats_angularAcceleration.csv', index = False)\n",
     "df_all_stats_angularAcceleration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normal People"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing file: Computer Vision/Results/np/np1v1_results.csv\n",
+      "DataFrame shape: (7313, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Processing file: Computer Vision/Results/np/np1v2_results.csv\n",
+      "DataFrame shape: (7344, 14)\n",
+      "Statistics shape: (14, 10)\n",
+      "Combined description shape: (28, 10)\n",
+      "Combined description shape: (28, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_np_stats_list = []\n",
+    "\n",
+    "def extract_numbers(filename):\n",
+    "    match = re.match(r'np(\\d+)v(\\d+)', filename)\n",
+    "    if match:\n",
+    "        return int(match.group(1)), int(match.group(2))\n",
+    "    return filename\n",
+    "\n",
+    "\n",
+    "files = sorted(os.listdir('Computer Vision/Results/np/'), key=extract_numbers)\n",
+    "\n",
+    "for file in files:\n",
+    "    file_path = os.path.join('Computer Vision/Results/np/', file)\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    df_desc = df.describe().T\n",
+    "\n",
+    "    df_desc['file'] = file\n",
+    "    df_desc['statistic'] = df_desc.index\n",
+    "\n",
+    "    print(f\"Processing file: {file_path}\")\n",
+    "    print(f\"DataFrame shape: {df.shape}\")\n",
+    "    print(f\"Statistics shape: {df_desc.shape}\")\n",
+    "\n",
+    "    df_np_stats_list.append(df_desc)\n",
+    "\n",
+    "combined_desc = pd.concat(df_np_stats_list)\n",
+    "combined_desc = combined_desc[['file','statistic'] + [col for col in combined_desc.columns if col not in ['file','statistic']]]\n",
+    "\n",
+    "# Print the number of files processed and the shape of the combined DataFrame\n",
+    "print(f\"Combined description shape: {combined_desc.shape}\")\n",
+    "\n",
+    "# Save to CSV\n",
+    "combined_desc.to_csv('Computer Vision/Results/df_np_all_stats.csv', index=False)\n",
+    "\n",
+    "print(f\"Combined description shape: {combined_desc.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>statistic</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>np1v1_results.csv</td>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>7311.0</td>\n",
+       "      <td>0.057500</td>\n",
+       "      <td>71.020173</td>\n",
+       "      <td>-729.699033</td>\n",
+       "      <td>-27.280563</td>\n",
+       "      <td>0.496289</td>\n",
+       "      <td>28.309368</td>\n",
+       "      <td>677.486215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>np1v2_results.csv</td>\n",
+       "      <td>linear_acceleration</td>\n",
+       "      <td>7342.0</td>\n",
+       "      <td>0.013047</td>\n",
+       "      <td>67.376712</td>\n",
+       "      <td>-627.053821</td>\n",
+       "      <td>-28.924871</td>\n",
+       "      <td>-0.541511</td>\n",
+       "      <td>27.514374</td>\n",
+       "      <td>711.472604</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 file            statistic   count      mean        std  \\\n",
+       "13  np1v1_results.csv  linear_acceleration  7311.0  0.057500  71.020173   \n",
+       "27  np1v2_results.csv  linear_acceleration  7342.0  0.013047  67.376712   \n",
+       "\n",
+       "           min        25%       50%        75%         max  \n",
+       "13 -729.699033 -27.280563  0.496289  28.309368  677.486215  \n",
+       "27 -627.053821 -28.924871 -0.541511  27.514374  711.472604  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_np_all_stats = pd.read_csv('Computer Vision/Results/df_np_all_stats.csv')\n",
+    "\n",
+    "stats = ['linear_acceleration']\n",
+    "\n",
+    "df_np_all_stats_angularAcceleration = df_np_all_stats[df_np_all_stats['statistic'].isin(stats)].copy()\n",
+    "\n",
+    "df_np_all_stats_angularAcceleration.to_csv('Computer Vision/Results/df_np_all_stats_angularAcceleration.csv', index = False)\n",
+    "df_np_all_stats_angularAcceleration"
    ]
   }
  ],
