--- a/Computer Vision/angAccel_Stats_Analysis.ipynb
+++ b/Computer Vision/angAccel_Stats_Analysis.ipynb
@@ -32,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average min is: -6958.0197049456565\n",
-      "The average max is: 6110.924587742609\n",
+      "The average min is: -25907.74808054597\n",
+      "The average max is: 25956.019888676696\n",
       "The average std is: 919.2189962040665\n",
       "The average mean is: -2.2128066793789336\n"
      ]
@@ -49,8 +49,8 @@
    "source": [
     "df_all_std_avg = df_all_stats['std'].mean()\n",
     "df_all_mean_avg = df_all_stats['mean'].mean()\n",
-    "df_all_min_avg = df_all_stats['min'].mean()\n",
-    "df_all_max_avg = df_all_stats['max'].mean()\n",
+    "df_all_min_avg = df_all_stats['min'].min()\n",
+    "df_all_max_avg = df_all_stats['max'].max()\n",
     "\n",
     "print(f\"The average min is: {df_all_min_avg}\")\n",
     "print(f\"The average max is: {df_all_max_avg}\")\n",
@@ -67,15 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average min is: -678.3764269549524\n",
-      "The average max is: 694.4794094718363\n",
+      "The average min is: -729.6990328980639\n",
+      "The average max is: 711.4726044085791\n",
       "The average std is: 69.19844224239625\n",
       "The average mean is: 0.03527340888904175\n"
      ]
@@ -84,8 +84,8 @@
    "source": [
     "df_np_all_std_avg = df_np_all_stats['std'].mean()\n",
     "df_np_all_mean_avg = df_np_all_stats['mean'].mean()\n",
-    "df_np_all_min_avg = df_np_all_stats['min'].mean()\n",
-    "df_np_all_max_avg = df_np_all_stats['max'].mean()\n",
+    "df_np_all_min_avg = df_np_all_stats['min'].min()\n",
+    "df_np_all_max_avg = df_np_all_stats['max'].max()\n",
     "\n",
     "print(f\"The average min is: {df_np_all_min_avg}\")\n",
     "print(f\"The average max is: {df_np_all_max_avg}\")\n",
