--- a/Instructor_Examples/graph.ipynb
+++ b/Instructor_Examples/graph.ipynb
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNN to determien correlation"
+    "### CNN to determien correlation between std and the TUG-Dual task time"
    ]
   },
   {
