--- a/Computer Vision/graph.ipynb
+++ b/Computer Vision/graph.ipynb
@@ -1094,7 +1094,9 @@
     "\n",
     "# Make predictios\n",
     "predictions = model.predict(new_input)\n",
-    "print(predictions)"
+    "print(predictions)\n",
+    "\n",
+    "## Training with multiple parameters vs single"
    ]
   }
  ],
